[gd_scene load_steps=11 format=3 uid="uid://bbuyg86708rtx"]

[ext_resource type="Texture2D" uid="uid://cwn657chk4enq" path="res://sprites/s_next_icn.png" id="1_agv0i"]
[ext_resource type="Script" path="res://scens/ui/dialog_buttons.gd" id="1_jeeny"]
[ext_resource type="Texture2D" uid="uid://qw6ilnlb74vy" path="res://sprites/s_retry_icn.png" id="2_wd4y2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wis0v"]

[sub_resource type="Animation" id="Animation_ng4gr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_av7nt"]
resource_name = "button_click"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 0.75), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ittry"]
_data = {
"RESET": SubResource("Animation_ng4gr"),
"button_click": SubResource("Animation_av7nt")
}

[sub_resource type="Animation" id="Animation_y08fw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ueo7b"]
resource_name = "button_click"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 0.75), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pkh1e"]
_data = {
"RESET": SubResource("Animation_y08fw"),
"button_click": SubResource("Animation_ueo7b")
}

[node name="Panel" type="Panel"]
offset_right = 137.0
offset_bottom = 23.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_wis0v")
script = ExtResource("1_jeeny")

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
pivot_offset = Vector2(25, 25)
texture_normal = ExtResource("1_agv0i")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="NextButton"]
libraries = {
"": SubResource("AnimationLibrary_ittry")
}

[node name="RetryButton" type="TextureButton" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
pivot_offset = Vector2(25, 25)
size_flags_vertical = 4
texture_normal = ExtResource("2_wd4y2")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="RetryButton"]
libraries = {
"": SubResource("AnimationLibrary_pkh1e")
}

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="animation_finished" from="NextButton/AnimationPlayer" to="." method="_on_next_animation_finished"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="animation_finished" from="RetryButton/AnimationPlayer" to="." method="_on_retry_animation_finished"]
